# encoding_c

./: COPYRIGHT  Cargo.toml  README.md  build-disabled.rs  build.rs
include/: encoding_rs.h  encoding_rs_cpp.h  encoding_rs_statics.h
src/: lib.rs
