[package]
name = "encoding_c"
description = "C API for encoding_rs"
version = "0.4.0"
authors = ["Henri Sivonen <hsivonen@hsivonen.fi>"]
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/encoding_c/"
homepage = "https://docs.rs/encoding_c/"
repository = "https://github.com/hsivonen/encoding_c"
keywords = ["ffi", "capi", "encoding", "web", "unicode", "charset"]
build = "build.rs"

[features]
simd-accel = ["encoding_rs/simd-accel"]

[dependencies]
encoding_rs = { path = "../encoding_rs/" }

[lib]
name = "encoding_c"
# The below line confuses rustfmt. Uncomment to build a staticlib.
# crate-type = ["rlib", "staticlib"]

[build-dependencies]
rusty-cheddar = "0.3.3"

[profile.release]
lto = true
