[package]
name = "encoding_c"
description = "C API for encoding_rs"
version = "0.9.0"
authors = ["Henri Sivonen <hsivonen@hsivonen.fi>"]
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/encoding_c/"
homepage = "https://docs.rs/encoding_c/"
repository = "https://github.com/hsivonen/encoding_c"
keywords = ["ffi", "capi", "encoding", "unicode", "charset"]
# Uncomment the line below and rename build-disabled.rs to build.rs to re-run cheddar.
# build = "build.rs"

[features]
simd-accel = ["encoding_rs/simd-accel"]
less-slow-kanji-encode = ["encoding_rs/less-slow-kanji-encode"]
less-slow-big5-hanzi-encode = ["encoding_rs/less-slow-big5-hanzi-encode"]
less-slow-gb-hanzi-encode = ["encoding_rs/less-slow-gb-hanzi-encode"]

[dependencies]
encoding_rs = "0.8.0"

# Uncomment the lines below to re-run cheddar.
# [build-dependencies]
# rusty-cheddar = "0.3.3"
